# KiezRadar

./: README.md
apps/training/: pyproject.toml
apps/training/src/training/: __init__.py
data/raw/fahrraddiebstahl/: Fahrraddiebstahl.csv
docs/: data_sources.md
